--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/screen-orientation": "^5.23.0",
     "@ionic-native/splash-screen": "^5.23.0",
+    "@ionic-native/sqlite": "^5.25.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^5.23.0",
     "@ionic/angular": "^5.0.0",
@@ -35,6 +36,7 @@
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-tts": "^0.2.3",
+    "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^3",
     "es6-promise-plugin": "^4.2.2",
     "ionicons": "^5.0.1",
