--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "copy:res": "cp -rf ~/Downloads/ApeToolsGeneratedAssets/bundle/android/* ./android/app/src/main/res/",
     "remove-old": "sudo rm -rf android && sudo rm -rf www",
     "gen:android": "npx cap add android",
-    "android": "npm run build && sudo npx cap open android"
+    "android": "npm run build && npm run gen:android && sudo npx cap open android"
   },
   "private": true,
   "dependencies": {
@@ -28,7 +28,6 @@
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/screen-orientation": "^5.23.0",
     "@ionic-native/splash-screen": "^5.23.0",
-    "@ionic-native/sqlite": "^5.25.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^5.23.0",
     "@ionic/angular": "^5.0.0",
@@ -36,7 +35,6 @@
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-tts": "^0.2.3",
-    "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^3",
     "es6-promise-plugin": "^4.2.2",
     "ionicons": "^5.0.1",
